# embedded_nn_loader

./: .gitmodules  CMakeLists.txt
example/reorder/: example_cnn.json  example_reorder.c
inc/: nn_order.h
src/: nn_order.c
